--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "node": "^15.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
